[package]
name = "enigma"
version = "0.1.0"
edition = "2021"

[lib]
name = "enigma"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"